--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DATABASE_STORAGE=./database.sqlite
 DATABASE_LOGGING=true
 DATABASE_FORCE_SYNC=false
 LOG_LEVEL=debug
+ALGOLIA_APP_ID=YourApplicationID
+ALGOLIA_API_KEY=YourAdminAPIKey
