--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@types/joi": "^17.2.3",
     "@types/log4js": "^2.3.5",
+    "algoliasearch": "^5.37.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "inversify": "^6.2.2",
     "inversify-express-utils": "^6.5.0",
@@ -26,8 +28,7 @@
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "dotenv": "^16.4.5"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
@@ -37,10 +38,10 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^30.0.4",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.8.3",
     "nodemon": "^3.1.4",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.3"
   }
 }
