feat(zoho-integration): update .env.example to hold recent key updates

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DATABASE_FORCE_SYNC=false
 LOG_LEVEL=debug
 ALGOLIA_APP_ID=YourApplicationID
 ALGOLIA_API_KEY=YourAdminAPIKey
+ZOHO_CLIENT_ID=your_client_id
+ZOHO_CLIENT_SECRET=your_client_secret
+ZOHO_SOID=your_zoho_soid
