feat(LLM-integration): add basic integration with open ai LLM to provide facts on products and orders from db

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ ALGOLIA_API_KEY=YourAdminAPIKey
 ZOHO_CLIENT_ID=your_client_id
 ZOHO_CLIENT_SECRET=your_client_secret
 ZOHO_SOID=your_zoho_soid
+OPENAI_API_KEY=your_openai_apikey
+OPENAI_API_MODEL=your_preferred_model
